CUP version 0.11a beta 20050516 is a management release.

To indicate, that the CUP project switches from the Princeton team to the
technical university of munich, we switch to version 11 since this moment.
Nothing else has changed since the last bugfix release, as indicated in
the version date.

M. Petter
Technische Universität München
2005/05/16
------------------------------------------------------------------------
CUP version 0.10k TUM Edition 20050516 is a bugfix release.

We forgot to implement a simple line in the wildcard production integration,
leading to wildcards like ArrayList<? extends MyClass> being
destroyed. Meanwhile, everything should work as it is supposed to.

M. Petter
Technische Universität München
2005/05/16
------------------------------------------------------------------------
CUP version 0.10k TUM Edition 20050514 is a bugfix/enhancement release.

Along with the redesigned Lexer, CUP lost a lot of error tracking and
displaying capabilities; now we have redesigned the Errormanager to display
even better error informations like column/line and the token in plain text,
CUP is processing, when the error occurs.

M. Petter
Technische Universität München
2005/05/14
------------------------------------------------------------------------
CUP version 0.10k TUM Edition 20050510 is a feature release.

CUP now supports generic parametrisation of datatypes for CUP terminals
and non terminals, as provided by Java 1.5. We do hope, it works correctly
all flavours of Java generics, as for example wildcards.

There is now an ANT Task for CUP, namely java_cup.anttask.CUPTask. It will
soon be added to the documentation - for the moment, You can look into the
sources to figure out, how to use it.

The CUP frontend, which parses .cup-files has changed to a JFlex-generated
scanner, which allows an easier maintainance.

M. Petter
Technische Universität München
2005/05/10
------------------------------------------------------------------------